<resources>
    <string name="app_name">搜书吧</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="tab_text_android">Android</string>
    <string name="tab_text_ios">IOS</string>
    <string name="tab_text_java">Java</string>
    <string name="tab_text_python">Python</string>
    <string name="tab_text_javascript">JavaScript</string>
    <string name="tab_text_html5">Html5</string>
    <string name="tab_text_linux">Linux</string>
    <string name="tab_text_csharp">C#</string>
    <string name="tab_text_jquery">Jquery</string>
    <string name="tab_text_db">数据库</string>
    <string name="tab_text_machinelearn">机器学习</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="already_tag">已显示标签(拖动可排序):</string>
    <string name="add_tag">可添加标签(点击可添加):</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
